fixing scrollbar again

--- a/page.css
+++ b/page.css
@@ -75,11 +75,13 @@ body {
 
 .top-nav::-webkit-scrollbar-track {
   background: transparent;
+  z-index:99999999999;
 }
 
 .top-nav::-webkit-scrollbar-thumb {
   background-color: var(--accent-color);
   border-radius: 2px;
+  z-index:99999999999;
 }
 
 /* Responsive top-nav height */
